# iris

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-iris-deprecated.opam  coq-iris-heap-lang.opam  coq-iris-unstable.opam  coq-iris.opam  rocq-iris-deprecated.opam  rocq-iris-heap-lang.opam  rocq-iris-unstable.opam  rocq-iris.opam
config/: flags  paths  source-list
docs/: dune.md  heap_lang.md  proof_mode.md  resource_algebras.md  style_guide.md
iris/: dune
iris/algebra/: agree.v  auth.v  big_op.v  cmra.v  cmra_big_op.v  coPset.v  cofe_solver.v  csum.v  dfrac.v  dyn_reservation_map.v  excl.v  frac.v  functions.v  gmap.v  gmultiset.v  gset.v  list.v  local_updates.v  monoid.v  (+13 more)
iris_deprecated/: dune
iris_heap_lang/: derived_laws.v  dune  lang.v  metatheory.v  proofmode.v  proph_erasure.v
iris_unstable/: dune
program_logic/: fancy_updates.v  wsat.v
tests/: algebra.v  algebra_finite.ref  algebra_finite.v  atomic.v  bi.ref  bi.v  bi_ascii_parsing.v  fixpoint.v  gset.v  heap_lang.ref  heap_lang.v  heap_lang_printing2.v  heapprop.v  heapprop_affine.v  ipm_paper.v  iprop.v  iris_notation.v  later_credits_paper.v  list_reverse.v  mosel_paper.v  mra.ref  mra.v  one_shot.v  one_shot_once.v  proofmode.ref  proofmode.v  proofmode_ascii.v  proofmode_iris.v  proofmode_monpred.v  proofmode_siprop.v  siprop.ref  string_ident.v  telescopes.v  tree_sum.v
tex/: .gitignore  algebra.tex  base-logic.tex  constructions.tex  heaplang.tex  iris.sty  iris.tex  language.tex  model.tex  program-logic.tex  upload
(+127 files in other folders)
